# numberrain

./: .gitignore  CMakeLists.txt  EXAMPLES.md  README.md
doc/scripting/: GUIDE.md  README.md  RESERVED-VARIABLES.md  VARIABLES.md
doc/scripting/operations/: ADD.md  ARCSIN.md  ASSIGN.md  BEGIN.md  DISABLEWORK.md  DIV.md  DROUND.md  ENABLEWORK.md  END.md  ENDFOR.md  EXP.md  FCT.md  FOR.md  GCD.md  JGT.md  JLE.md  JLT.md  JNE.md  LCM.md  LN.md  LOGB.md  MARK.md  MOD.md  MUL.md  PRINT.md  README.md  ROUND.md  SQRT.md  SUB.md  TAN.md  VADD.md  VC.md  VCROSS.md  VPTR.md  VRTP.md  VSMUL.md  VSUB.md  VX.md
doc/scripting/operations/array/: AC.md  ADELETE.md  AE.md  ALEN.md  APOST.md  APRE.md
doc/scripting/operations/control-flow/: BREAK.md  CALL.md  CMP.md  CONTINUE.md  DIE.md  ELSE.md  ELSEIF.md  ENDFOR.md  ENDFUNC.md  ENDIF.md  ENDWHILE.md  FOR.md  FUNCTION.md  IF.md  JEQ.md  JGE.md  (+3 more)
doc/scripting/preoperations/: PRECISION.md  README.md
example-scripts/: 2-plus-2.nrs  ackermann.nrs  arguments.nrs  arrays.nrs  basic-looping.nrs  basic-matrices.nrs  chudnovsky-pi.nrs  conditional-branching.nrs  functions.nrs  harmonic-series.nrs  infinite-loop.nrs  jumping.nrs  nested-loops.nrs  non-integer-factorial.nrs  pseudofunction.nrs  tetration.nrs  variables.nrs
src/: Configuration.cpp  Configuration.h  GlobalVars.cpp  GlobalVars.h  IntegerOperation.cpp  IntegerOperation.h  MatrixOperation.cpp  MatrixOperation.h  OperationDispatcher.cpp  OperationDispatcher.h  RealOperation.cpp  RealOperation.h  StringOperation.cpp  StringOperation.h  Structures.h  VectorOperation.cpp  VectorOperation.h  Version.h  main.cpp  ops.h
src/algebra/: Base10Logarithm.cpp  Base10Logarithm.h  CustomBaseLogarithm.cpp  CustomBaseLogarithm.h  NaturalLogarithm.cpp  NaturalLogarithm.h
src/elementary/: Addition.cpp  Addition.h  Division.cpp  Division.h  Exponentiation.cpp  Exponentiation.h  Factorial.cpp  Factorial.h  GreatestCommonDenominator.cpp  GreatestCommonDenominator.h  LeastCommonMultiple.cpp  LeastCommonMultiple.h  Modulus.cpp  Modulus.h  Multiplication.cpp  Multiplication.h  SquareRoot.cpp  SquareRoot.h  Subtraction.cpp  Subtraction.h
src/logging/: Logger.cpp  Logger.h
src/matrix/: Matrix.cpp  Matrix.h  MatrixAddition.cpp  MatrixAddition.h  MatrixDeterminant.cpp  MatrixDeterminant.h  MatrixMultiplication.cpp  MatrixMultiplication.h  MatrixSubtraction.cpp  MatrixSubtraction.h
src/scripting/: Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h  ScriptReader.cpp  ScriptReader.h
src/trigonometry/: Arccosine.cpp  Arccosine.h  Arcsine.cpp  Arcsine.h  Arctangent.cpp  Arctangent.h  Cosine.cpp  Cosine.h  Sine.cpp  Sine.h  Tangent.cpp  Tangent.h
src/vector/: VectorAddition.cpp  VectorAddition.h  VectorCrossProduct.cpp  VectorCrossProduct.h  VectorDotProduct.cpp  VectorDotProduct.h  VectorPolarToRectangular.cpp  VectorPolarToRectangular.h  VectorRectangularToPolar.cpp  VectorRectangularToPolar.h  VectorScalarMultiplication.cpp  VectorScalarMultiplication.h  VectorSubtraction.cpp  VectorSubtraction.h
(+34 files in other folders)
